--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>IN CHARGE</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<p>Find your topics <%= link_to "HERE", topics_path, class: 'text-dark' %>!</p>
