--- a/app/views/subtopics/index.html.erb
+++ b/app/views/subtopics/index.html.erb
@@ -5,7 +5,7 @@
    <div class="row my-2 rowSubtopics">
       <% @subtopics.each do |subtopic| %>
        <strong><%= subtopic.title %></strong>
-       <small class="text-right flex-shrink-0"><%= link_to "See More", tiles_path(subtopic) %></small>
+       <small class="text-right flex-shrink-0"><%= link_to "See More", subtopic_tiles_path(subtopic) %></small>
     <% end %>
     </div>
 </div>
