--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,25 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+//Items & search bar
+
+.nav-item {
+  margin-left: 0.8em;
+  margin-right: 0.8em;
+  padding-top: 0;
+ a {
+  color: rgb(63, 60, 60);
+  text-decoration: none;
+ }
+}
+
+.navbar-nav {
+  justify-content: center;
+  align-items: center;
+  form {
+    display: flex;
+    width: 80%;
+    height: 80%;
+  }
+}
