--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,19 +11,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", root_path, id: "home-link" %>
+          <li class="nav-item">
+            <%= link_to "Topics", topics_path, id: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Dashboard", subscriptions_path, id: "booking-link" %>
+            <%= link_to "Dashboard", subscriptions_path, id: "nav-link" %>
           </li>
           <div class="navbar-search">
             <div class="row"></div>
-              <%= form_tag cameras_path, method: :get do %>
+              <%= form_tag topics_path, method: :get do %>
                 <%= text_field_tag :query,
                   params[:query],
                   class: "form-control",
-                  placeholder: "search inCharge"
+                  placeholder: "Search inCharge"
                 %>
               <%= submit_tag "Go", class: "btn btn-dark" %>
               <% end %>
