create subscription added

--- a/app/views/tiles/index.html.erb
+++ b/app/views/tiles/index.html.erb
@@ -5,6 +5,6 @@
       <%= tile.summary %>
       <%= tile.content %>
       <%= cl_image_tag tile.photos[0].key %>
-      <%= link_to "See tile", subtopic_tile_path(@subtopic, tile) %>
+      <%= link_to "See tile", tile_path(tile) %>
     <% end %>
 <%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic)%>
