--- a/app/views/tiles/show.html.erb
+++ b/app/views/tiles/show.html.erb
@@ -1,5 +1,4 @@
 <h1> <%= @tile.title %> </h1>
 <h3><%= @tile.summary %></h3>
 <h3><%= @tile.content %></h3>
-<%=link_to 'Subscribe', create_path%>
-<%=link_to 'Back', subtopic_tiles_path(@subtopic)%>
+<%=link_to 'Subscribe', tile_subscriptions_path(@tile), method: :post%>
