--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,17 @@
 // Specific CSS for your home-page
+body {
+	background-color: #363D2F;
+}
+
+.h1 .h2 .h2 {
+  color: white;
+}
+
+.a {
+  text-decoration: none;
+  color: white;
+}
+
+.a:hover {
+  color: chocolate;
+}
