--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,8 @@
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
     <% end %>
 
+
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,29 +13,26 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Topics", topics_path, id: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Dashboard", subscriptions_path, id: "nav-link" %>
-          </li>
-          <div class="navbar-search">
+                  <div class="navbar-search">
             <div class="row"></div>
               <%= form_tag topics_path, method: :get do %>
                 <%= text_field_tag :query,
                   params[:query],
                   class: "form-control",
-                  placeholder: "Search inCharge"
+                  placeholder: "inCharge focused search ..."
                 %>
               <%= submit_tag "Go", class: "btn btn-dark" %>
               <% end %>
           </div>
+        <h2 id= "navbar-greeting">your top stories today</h1>
           <li class="nav-item dropdown">
             <%= image_tag "https://avatars.githubusercontent.com/u/95916189?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <%= link_to "Topics", topics_path, id: "nav-link" %>
               <%= link_to "Home", root_path, id: "home-link", class: "dropdown-item" %>
               <%= link_to "Dashboard", subscriptions_path, id: "nav-link", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+              <%= link_to "Dashboard", subscriptions_path, id: "nav-link" %>
             </div>
           </li>
         <% else %>
