--- a/app/views/tiles/index.html.erb
+++ b/app/views/tiles/index.html.erb
@@ -1,10 +1,20 @@
-<h1> Available Tiles </h1>
-    <% @tiles.each do |tile| %>
-      <%= tile.id %>
-      <%= tile.title %>
-      <%= tile.summary %>
-      <%= tile.content %>
-      <%= cl_image_tag tile.photos[0].key %>
-      <%= link_to "See tile", tile_path(tile) %>
-    <% end %>
-<%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic)%>
+<h1>HI</h1>
+
+<div class="container">
+	<div class="card">
+      <% @tiles.each do |tile| %>
+        <%= tile.id %>
+        <figure class="card__thumb">
+        <div class="card__image"> <%= cl_image_tag tile.photos[0].key %></div>
+          <figcaption class="card__caption">
+          <h2 class="card__title"><%= tile.title %></h2>
+            <p class="card__snippet"><%= tile.summary %></p>
+        <%= tile.content %>
+
+        <%= link_to "read more", tile_path(tile)%>
+      <% end %>
+  <%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic)%>
+          </figcaption>
+		  </figure>
+  </div>
+</div>
