--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,10 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <%=link_to 'Change topics', topics_path %>
+    <%=link_to 'About inCharge', topics_path %>
+
   </div>
   <div class="footer-copyright">
-    SuperCharge your Life, make the Internet yours, Be <i class="fas fa-bolt"></i> inCharge
+    Be <i class="fas fa-bolt"></i> inCharge
   </div>
 </div>
