--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -12,19 +12,20 @@
   justify-content: space-between;
   min-height: 140px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: white;
   bottom: 0;
 }
 .footer-links {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  color: white;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: white;
   text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
+  font-size: 1.5em;
+  padding: 0 23.75rem 0 3.125rem;
 }
 .footer-links a:hover {
   opacity: 1;
