--- a/app/assets/stylesheets/pages/_tiles.scss
+++ b/app/assets/stylesheets/pages/_tiles.scss
@@ -49,17 +49,60 @@ body {
 .container-tile-card {
   display: flex;
   justify-content: center;
-  width: 80%;
-  height: 80%;
-
+  width: 90%;
+  height: 90%;
 }
 
 .show-card-image {
-  height: 400px;
+  height: 500px;
   width: 100%;
   object-fit: cover;
 }
 
-.tile-card-col {
+.tile-card {
+  display: inline-flex;
+  flex-direction: row;
+}
 
+.tile-card-image {
+  margin: 10px;
+}
+
+.tile-card-text {
+  padding-top: 20px;
+  color: white;
+  margin: 10px;
+}
+
+.tile-card-text h1 {
+  padding-bottom: 20px;
+}
+
+.tile-card-text h5 {
+  padding-bottom: 15px;
+}
+
+
+.subscribe-btn {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  color: #363D2F;
+  border: white;
+  width: 40%;
+  font-size: 30px;
+}
+
+.subscribe-btn:hover {
+  border: white;
+  border-width: 20px;
+  background-color: #363D2F;
+  color: white;
+}
+
+.center-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
