--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="containerError">
-<figure>
+<figure class="figureClass">
 	<div class="sad-mac"></div>
 	<figcaption>
 		<span class="sr-text">Error 404</span>
