--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,11 +28,11 @@
           <li class="nav-item dropdown">
             <%= image_tag "https://avatars.githubusercontent.com/u/95916189?v=4", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Topics", topics_path, id: "nav-link" %>
+              <%= link_to "Topics", topics_path, id: "nav-link", class: "dropdown-item"%>
               <%= link_to "Home", root_path, id: "home-link", class: "dropdown-item" %>
               <%= link_to "Dashboard", subscriptions_path, id: "nav-link", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-              <%= link_to "Dashboard", subscriptions_path, id: "nav-link" %>
+              <%= link_to "Dashboard", subscriptions_path, id: "nav-link", class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
