--- a/app/views/tiles/show.html.erb
+++ b/app/views/tiles/show.html.erb
@@ -1,5 +1,13 @@
 <div class="container-tiles-page">
   <div class="container-tile-title row">
+  <% if @tile.nil? %>
+    <div class="col-6">
+      <h1 class="subheader">Content coming soon ...</h1>
+    </div>
+    <div class="col-6 buttons">
+      <%=link_to 'Back to all tiles', subtopic_tiles_path(@tile.subtopic_id), class:"btn btn-success subtopic-btn"%>
+    </div>
+  <% else %>
     <div class="col-6">
       <h1 class="subheader"><%= @tile.subtopic.topic.title  %>: <%= @tile.subtopic.title  %></h1>
     </div>
@@ -33,4 +41,5 @@
       </div>
     </div>
   </div>
+  <% end %>
 </div>
