--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -10,9 +10,8 @@
   }
 
 .topicsCard {
-  
   width: 100%;
-  padding: 1em;
+  padding: 5px 5px 5px 5px ;
   color: white;
 }
 
@@ -33,6 +32,14 @@
   border-radius: 0%;
 }
 
+.line1 {
+  border-bottom: 1px solid white;
+  height: 8em;
+  grid-column-start: 4;
+  grid-column-end: 6;
+  grid-row: 1;
+}
+
 .topicsCard-0 {
   grid-column-start: 1;
   grid-column-end: 4;
@@ -48,12 +55,15 @@
   grid-row: 1;
   height: 20em;
   margin-top: 10em;
+  border-top: solid;
+  border-top: white;
 }
 
 .topicsCard-2 {
+  border-right: 1px solid white;
   grid-column-start: 1;
   grid-column-end: 3;
-  grid-row: 2 ;
+  grid-row: 2;
   height: 20em;
 }
 .topicsCard-3 {
@@ -72,6 +82,7 @@
 }
 
 .topicsCard-6 {
-  grid-column: 3;
+  grid-column-start: 4;
+  grid-column-end: 6;
   grid-row: 4;
 }
