--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,20 +1,15 @@
-// body{
-//   text-align:center;
-//   display:flex;
-//   flex-direction:column;
-//   // min-height:100vh;
-// }
-
+.main-container{
+  min-height:100vh;
+ }
 
 .footer {
   background: transparent;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 150px;
+  // min-height: 150px;
   padding: 0px 50px;
   color: white;
-  bottom: 0;
 }
 .footer-links {
   display: flex;
