--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -17,12 +17,13 @@
   justify-content: space-between;
   color: white;
   opacity: 0.8;
+  font-family: 'tenor Sans', sans-serif;
 }
 .footer-links a {
   color: white;
   text-decoration: none;
   font-size: 1.5em;
-  padding: 0 23.75rem 0 3.125rem;
+  padding: 0 19.75rem 0 3.125rem;
 }
 .footer-links a:hover {
   opacity: 1;
