initial abt page mock

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="footer-links">
     <%=link_to 'Change topics', topics_path %>
-    <%=link_to 'About inCharge', topics_path %>
+    <%=link_to 'About inCharge', about_path %>
 
   </div>
   <div class="footer-copyright">
