--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -11,8 +11,16 @@
 
 .topicsCard {
   width: 100%;
-  padding: 5px 5px 5px 5px ;
+  padding: 5px 5px 8px 30px ;
   color: white;
+}
+
+#card-img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 350px;
+
 }
 
 .topicsCard h2 {
