--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="form">
+
 <h2>Change your password</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -24,4 +26,5 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="slinks"><%= render "devise/shared/links" %></div>
+</div>
