--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,4 @@
+<div class="form">
 <h2>Forgot your password?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -15,4 +16,5 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="slinks"><%= render "devise/shared/links" %></div>
+</div>
