--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,3 +1,3 @@
 <h1>500 Internal Server Error</h1>
-<h2>Run away!</h2>
+<h2>Run away! Go outside! Please dont do what you did again!</h2>
   <%=link_to 'Go back to topics', topics_path, class: "btn btn-light"%>
