--- a/app/views/tiles/index.html.erb
+++ b/app/views/tiles/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container-tiles-page">
-  <div class="container-tile-title row">
+<div class="container">
+  <div class="row">
     <% if @tiles.empty? %>
       <div class="col-6">
         <h1 class="subheader">Content coming soon ...</h1>
@@ -14,22 +14,23 @@
       <div class="col-6 buttons">
         <%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic), class:"btn btn-success subtopic-btn"%>
       </div>
-    </div>
-    <div class="container-tiles">
-        <% @tiles.each do |tile| %>
-          <div class="card">
-            <figure class="card__thumb">
-              <div class="card__image"> <%= cl_image_tag tile.photos[0].key %>
-                <figcaption class="card__caption">
-                  <h2 class="card__title"><%= tile.title %></h2>
-                  <p class="card__snippet"><%= tile.summary %></p>
-
-                  <%= link_to "read more", tile_path(tile), class:"card__button"%>
-                </figcaption>
-              </div>
-            </figure>
+  </div>
+  <div class="row">
+    <% @tiles.each do |tile| %>
+      <div class="col-4">
+        <div class="big-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= cl_image_path tile.photos[0].key%>);">
+          <div class="big-card-text">
+            <div class="big-card-text2" >
+              <h2><%= tile.title %></h2>
+            </div>
+            <div>
+              <%= link_to "read more", tile_path(tile), class:"btn btn-ghost"%>
+            </div>
           </div>
-        <% end %>
-    </div>
-  <% end %>
+        </div>
+      </div>
+
+    <% end %>
+  </div>
+    <% end %>
 </div>
