small style changes

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,6 +1,6 @@
-
+<div class="container">
   <div class="containerTitleTopic row">
-  <div class="col-6">
+  <div class="col-6 mb-5">
     <h2>Choose your topics</h2>
   </div>
 </div>
@@ -19,3 +19,4 @@
         </div>
     </div>
   <% end %>
+</div>
