--- a/app/views/subtopics/index.html.erb
+++ b/app/views/subtopics/index.html.erb
@@ -1,5 +1,6 @@
-  <div class="containerTitle row">
-  <div class="col-6">
+<div class="container">
+ <div class="containerTitle row">
+  <div class="col-6 mb-5">
     <h2>Sub-topics</h2>
   </div>
   <div class="col-6">
@@ -22,3 +23,4 @@
         </div>
     </div>
   <% end %>
+</div>
