--- a/app/views/tiles/index.html.erb
+++ b/app/views/tiles/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <div class="row">
+  <div class="row mb-5">
     <% if @tiles.empty? %>
       <div class="container-tile-title row">
         <div class="col-6">
