--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -10,17 +10,23 @@
   }
 
 .topicsCard {
+  font-size: small;
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
-  padding: 5px 5px 8px 30px ;
+  padding: 6px 16px 52px 24px;
   color: white;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  align-content: flex-end;
 }
 
-#card-img {
+
+.card-img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   height: 350px;
-
 }
 
 .topicsCard h2 {
@@ -40,21 +46,44 @@
   border-radius: 0%;
 }
 
+.five-min {
+  font-family:'Archivo Narrow', sans-serif;
+  font-size: 9px;
+  height: 5em;
+  width: 5em;
+  color: white;
+  grid-column-start: 4;
+  grid-column-end: 4;
+  grid-row: 1;
+  margin-top: 7em;
+}
+
 .line1 {
   border-bottom: 1px solid white;
-  height: 8em;
+  height: 5em;
   grid-column-start: 4;
   grid-column-end: 6;
   grid-row: 1;
+}
+
+.line2 {
+  border-right: 1px solid white;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row: 2;
+  height: 15em;
+  margin-top: 1em;
+  width: 14em;
 }
 
 .topicsCard-0 {
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row: 1;
-  margin-top: 3em;
-  height: 25em;
+  margin-top: 2em;
+  height: 26em;
   width: 93%;
+  padding-right: 132px;
 }
 
 .topicsCard-1 {
@@ -62,17 +91,20 @@
   grid-column-end: 6;
   grid-row: 1;
   height: 20em;
-  margin-top: 10em;
+  margin-top: 7em;
   border-top: solid;
   border-top: white;
+  padding-bottom: 2em;
 }
 
 .topicsCard-2 {
-  border-right: 1px solid white;
   grid-column-start: 1;
   grid-column-end: 3;
   grid-row: 2;
-  height: 20em;
+  height: 19em;
+  width: 37em;
+  margin-top: 1em;
+  padding-bottom: 2em;
 }
 .topicsCard-3 {
   grid-column: 3;
@@ -86,11 +118,32 @@
   grid-column-start: 4;
   grid-column-end: 6;
   grid-row: 2;
-  height: 20em;
+  margin-top: 1em;
+  height: 19em;
+  padding-bottom: 2em;
 }
 
 .topicsCard-6 {
   grid-column-start: 4;
   grid-column-end: 6;
   grid-row: 4;
+}
+
+.topicsCard-7 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row: 2;
+  height: 19em;
+  width: 18em;
+  margin-top: 1em;
+  margin-left: -2em;
+  padding-bottom: 2em;
+}
+
+.read-more {
+  margin-right: 9px;
+}
+
+.Unsubscribe {
+  margin-bottom: 9px;
 }
