--- a/app/views/subtopics/index.html.erb
+++ b/app/views/subtopics/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
- <div class="containerTitle row">
+ <div class="containerTitle row mt-2">
   <div class="col-6 mb-5">
     <h2>Sub-topics</h2>
   </div>
   <div class="col-6">
-    <%=link_to 'Back to topics', topics_path, class: "btn btn-light btnSubtopic"%>
+    <%=link_to 'Back to topics', topics_path, class: "animated-border-button"%>
   </div>
 </div>
 
