--- a/app/views/tiles/index.html.erb
+++ b/app/views/tiles/index.html.erb
@@ -7,7 +7,7 @@
           <h1 class="subheader">Content coming soon ...</h1>
         </div>
         <div class="col-6 buttons">
-          <%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic), class:"btn btn-success subtopic-btn"%>
+          <%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic), class:"animated-border-button"%>
         </div>
       </div>
 
@@ -17,7 +17,7 @@
           <h1 class="subheader"><%= @tiles[0].subtopic.topic.title  %>: <%= @tiles[0].subtopic.title  %></h1>
         </div>
         <div class="col-6 buttons">
-          <%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic), class:"btn btn-success subtopic-btn"%>
+          <%=link_to 'Back to subtopics', topic_subtopics_path(@subtopic.topic), class:"animated-border-button"%>
         </div>
       </div>
   </div>
