--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
   <div class="front-container">
     <h1 id="title">inCharge</h1>
+    <br>
 
-    <p id="sub-title">Find your topics <%= link_to "here", topics_path, class:"btn btn-success subtopic-btn"%>!</p>
+    <p id="sub-title">Find your topics <%= link_to "here", topics_path, class:"welcome-btn"%>!</p>
 
     <svg id="animate" width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 134px; height: 134px; transform: rotateY(0deg);"><style>
         .line-grid1-a {animation:line-grid1-draw 2s infinite; stroke-dasharray: 180;}
