--- a/app/views/subscriptions/show.html.erb
+++ b/app/views/subscriptions/show.html.erb
@@ -6,7 +6,7 @@
           <h1 class="subheader">Content coming soon ...</h1>
         </div>
         <div class="col-6 buttons">
-          <%=link_to 'Back to all subscriptions', subscriptions_path(@subscription.tile.subtopic_id), class:"btn btn-success subtopic-btn"%>
+          <%=link_to 'Back to all subscriptions', subscriptions_path(@subscription.tile.subtopic_id), class:"animated-border-button"%>
         </div>
       <% else %>
         <div class="col-6">
