--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,6 +31,7 @@
               <%= link_to "Home", root_path, id: "home-link", class: "dropdown-item" %>
               <%= link_to "Dashboard", subscriptions_path, id: "nav-link", class: "dropdown-item" %>
               <%= link_to "Topics", topics_path, id: "nav-link", class: "dropdown-item"%>
+              <%= link_to "My Account", profile_path, id: "nav-link", class: "dropdown-item"%>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
